# aws_local

./: .env-sample  Cargo.toml  Dockerfile.dev  Makefile  README.md  docker-compose.yml
aws-cli/: .env  Dockerfile
aws-cli/cognito/: init.sh  list.sh
aws-cli/s3/: init.sh
aws-cli/ses/: init.sh
src/: main.rs
src/cognito/: mod.rs
src/config/: mod.rs
src/error/: mod.rs
src/s3/: mod.rs
