[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.80"
aws-config = "1.5.0"
aws-sdk-cognitoidentityprovider = "1.32.0"
aws-sdk-s3 = "1.33.0"
futures = "0.3.30"
jsonwebtoken = "9.3.0"
log = "0.4.21"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }

[dev-dependencies]
dotenv = "0.15.0"
env_logger = "0.11.3"
